fix: overflow on settings in firefox

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -159,3 +159,7 @@ html {
     opacity: 0;
   }
 }
+
+input[type="radio"] {
+  display: none;
+}
